# dtc-level-2-game

./: .gitignore  README.md  errors.py  label.py  main.py  power.py  pyproject.toml  setup.cfg  static_values.py  views.py
.github/workflows/: codeql-analysis.yml  lint.yml
assets/characters/main_character/: main_character.aseprite  main_character_idle.aseprite
assets/maps/: level_1.tmx  level_2.tmx  level_3.tmx
assets/tilesheets/: extras_tilesheet.tsx  ice_with_water_tileset.tsx  ice_with_water_tileset_spikes.tsx  ice_with_water_tileset_springboard.tsx
power/: custom_random.py  power.py
sprites/: player.py
views/: __init__.py  game_over_view.py  game_view.py  instruction_view.py  win_view.py
